--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -36,7 +36,8 @@
                 <li><a class="dropdown-item" th:href="@{/workOrderView}">Work Orders</a></li>
                 <li><a class="dropdown-item" th:href="@{/workOrderSubmit}">Work Order Submit</a></li>
                 <li><a class="dropdown-item" th:href="@{/customerView}">Customer Information</a></li>
-                <li><a class="dropdown-item" th:href="@{/warrantyClaimSubmit}">Warranty Claims</a></li>
+                <li><a class="dropdown-item" th:href="@{/warrantyClaimSubmit}">Warranty Claim Submit</a></li>
+                <li><a class="dropdown-item" th:href="@{/warrantyClaimView}">Warranty Claims</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
