got a working vendor

--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -55,6 +55,7 @@
                 Company Information
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" th:href="@{/vendorSubmit}">Vendor Submit</a></li>
                 <li><a class="dropdown-item" th:href="@{/vendorView}">Vendors</a></li>
                 <li><a class="dropdown-item" th:href="@{/warrantyDivisionSubmit}">Warranty Division Submit</a></li>
                 <li><a class="dropdown-item" th:href="@{/warrantyDivisionView}">Warranty Divisions</a></li>
