--- a/src/main/resources/templates/vendorSubmit.html
+++ b/src/main/resources/templates/vendorSubmit.html
@@ -18,23 +18,12 @@
 <body>
   <main>
   <h1>Add a new Vendor's details</h1>
-  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h4>Enter the details for the new Vendor</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addvendor}" th:object="${Vendor}">
-      <div class="form-name">Name</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="VendorName" 
-                th:field="*{VendorName}" placeholder="Name of the Vendor" required />
-      <br>
-      <div class="form-name">Contact Information</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="EmailContact" 
-                th:field="*{EmailContact}" placeholder="Contact Information of the Vendor" required />
-      <br>
-      <div class="form-name">Billing and Shipping Address</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="text" id="BillingShippingAddress" 
-                th:field="*{BillingShippingAddress}" placeholder="Billing and Shipping Address of the Part" required />
-      <br>
-
+    <form action="#" method="post" th:action="@{/vendorSubmitForm}" th:object="${Vendor}">
+      <div class="form-name">Name: <input style="font-family: Quicksand, sans-serif;" type="text" id="VendorName" th:field="*{VendorName}" placeholder="Name of the Vendor" required /></div> 
+      <div class="form-name">Contact Information: <input style="font-family: Quicksand, sans-serif;" type="text" id="EmailContact" th:field="*{EmailContact}" placeholder="Contact Information of the Vendor" required /></div> 
+      <div class="form-name">Billing and Shipping Address: <input style="font-family: Quicksand, sans-serif;" type="text" id="BillingShippingAddress" th:field="*{BillingShippingAddress}" placeholder="Billing and Shipping Address of the Part" required /></div> 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
