--- a/src/main/resources/templates/warrantyDivisionView.html
+++ b/src/main/resources/templates/warrantyDivisionView.html
@@ -42,8 +42,8 @@
 
     <table id="WarrantyDivisionViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name">Brand |</th>
-        <th class="header-name" >EmailContact </th>
+        <th class="header-name"> Brand |</th>
+        <th class="header-name" > Contact Information </th>
         
         <tr th:each="n:${WarrantyDivisions}">
           <td th:text="${n.Brand}"></td>
