got a working usage report

--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -24,7 +24,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" th:href="@{/staffView}">Staff Information</a></li>
-                <li><a class="dropdown-item" th:href="@{/usageReportSubmit}">Submit a Work Report</a></li>
+                <li><a class="dropdown-item" th:href="@{/technicianWorkReportSubmit}">Submit a Work Report</a></li>
                 <li><a class="dropdown-item" th:href="@{/certificationView}">Certifications</a></li>
               </ul>
             </li>
@@ -48,6 +48,7 @@
                 <li><a class="dropdown-item" th:href="@{/partView}">Parts</a></li>
                 <li><a class="dropdown-item" th:href="@{/toolView}">Tools</a></li>
                 <li><a class="dropdown-item" th:href="@{/usageReportSubmit}">Submit a Usage Report</a></li>
+                <li><a class="dropdown-item" th:href="@{/usageReportView}">Usage Reports</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
