created workitem edit, fixed a bunch of bugs, will set the program up to instantiate all tables at launch, yay!

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,6 +4,7 @@
 
   <body>
     <p th:text="${message}">Exception message</p>
+    <p> you may want to drop all tables in your local pg <p>
   </body>
 
 </html>
