--- a/src/main/resources/templates/customerView.html
+++ b/src/main/resources/templates/customerView.html
@@ -42,11 +42,11 @@
 
     <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
-        <th class="header-name">CustomerIdentifer |</th>
-        <th class="header-name" >Customer Number |</th>
-        <th class="header-name">Email |</th>
-        <th class="header-name">Phone Number |</th>
-        <th class="header-name">Address</th>
+        <th class="header-name">Customer #</th>
+        <th class="header-name" >|Customer Name </th>
+        <th class="header-name">|Email</th>
+        <th class="header-name">|Phone Number</th>
+        <th class="header-name">|Address</th>
         
         <tr th:each="n:${Customers}">
           <td th:text="${n.CustIdentifier}"></td>
