--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -23,6 +23,7 @@
                 Staff Information
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" th:href="@{/staffSubmit}">Add a Staff Member</a></li>
                 <li><a class="dropdown-item" th:href="@{/staffView}">Staff Information</a></li>
                 <li><a class="dropdown-item" th:href="@{/technicianWorkReportSubmit}">Submit a Work Report</a></li>
                 <li><a class="dropdown-item" th:href="@{/certificationView}">Certifications</a></li>
