--- a/src/main/resources/templates/staffSubmit.html
+++ b/src/main/resources/templates/staffSubmit.html
@@ -18,22 +18,17 @@
 <body>
   <main>
   <h1>Add a new staff member's details</h1>
-  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h2>Data of an Employee will be taken from this page and submitted into both 
         StaffRoles and StaffDetails tables</h2>
   <h4>Enter the details for the new staff member</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addemployee}" th:object="${Employee}">
-      <div class="form-name">Id</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="Id" 
-                th:field="*{Id}" placeholder="Id of the employee" required />
-      <br>
+    <form action="#" method="post" th:action="@{/StaffSubmitForm}" th:object="${Staff}">
       <div class="form-name">Name</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="Name" 
                 th:field="*{Name}" placeholder="Name of the employee" required />
       <br>
-      <div class="form-name">Number</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="PhoneNumber" 
+      <div class="form-name">Phone Number</div> 
+      <input style="font-family: Quicksand, sans-serif;" type="text" id="PhoneNumber" 
                 th:field="*{PhoneNumber}" placeholder="Phone number of the employee" required />
       <br>
       <div class="form-name">Role</div> 
