added Tools, ignore the edit page and functions, they dont work

--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -46,7 +46,9 @@
                 Item Information
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" th:href="@{/partSubmit}">Submit a Part</a></li>
                 <li><a class="dropdown-item" th:href="@{/partView}">Parts</a></li>
+                <li><a class="dropdown-item" th:href="@{/toolSubmit}">Submit a Tool</a></li>
                 <li><a class="dropdown-item" th:href="@{/toolView}">Tools</a></li>
                 <li><a class="dropdown-item" th:href="@{/usageReportSubmit}">Submit a Usage Report</a></li>
                 <li><a class="dropdown-item" th:href="@{/usageReportView}">Usage Reports</a></li>
