--- a/src/main/resources/templates/toolSubmit.html
+++ b/src/main/resources/templates/toolSubmit.html
@@ -18,14 +18,9 @@
 <body>
   <main>
   <h1>Add a new Tool's details</h1>
-  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h4>Enter the details for the new Tool</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addtool}" th:object="${Tool}">
-      <div class="form-name">Id</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="ToolID" 
-                th:field="*{ToolID}" placeholder="Id of the Tool" required />
-      <br>
+    <form action="#" method="post" th:action="@{/toolSubmitForm}" th:object="${Tool}">
       <div class="form-name">Name</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="ToolName" 
                 th:field="*{ToolName}" placeholder="Name of the Tool" required />
