--- a/src/main/resources/templates/partSubmit.html
+++ b/src/main/resources/templates/partSubmit.html
@@ -18,16 +18,11 @@
 <body>
   <main>
   <h1>Add a new Part's details</h1>
-  <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h2>Data of an Part will be taken from this page and submitted into both 
         PartList and PartDesciption tables</h2>
   <h4>Enter the details for the new Part</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addpart}" th:object="${Part}">
-      <div class="form-name">Id</div> 
-      <input style="font-family: Quicksand, sans-serif;" type="number" id="PartID" 
-                th:field="*{PartID}" placeholder="Id of the Part" required />
-      <br>
+    <form action="#" method="post" th:action="@{/PartSubmitForm}" th:object="${Part}">
       <div class="form-name">Name</div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="PartName" 
                 th:field="*{PartName}" placeholder="Name of the Part" required />
@@ -36,7 +31,6 @@
       <input style="font-family: Quicksand, sans-serif;" type="text" id="PartDescription" 
                 th:field="*{PartDescription}" placeholder="Description of the Part" required />
       <br>
-
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
