--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -26,6 +26,7 @@
                 <li><a class="dropdown-item" th:href="@{/staffSubmit}">Add a Staff Member</a></li>
                 <li><a class="dropdown-item" th:href="@{/staffView}">Staff Information</a></li>
                 <li><a class="dropdown-item" th:href="@{/technicianWorkReportSubmit}">Submit a Work Report</a></li>
+                <li><a class="dropdown-item" th:href="@{/certificationSubmit}">Add a Certification</a></li>
                 <li><a class="dropdown-item" th:href="@{/certificationView}">Certifications</a></li>
               </ul>
             </li>
