added Address book to customer

--- a/src/main/resources/templates/customerSubmit.html
+++ b/src/main/resources/templates/customerSubmit.html
@@ -26,6 +26,7 @@
       <div class="form-name">Email :<input style="font-family: Quicksand, sans-serif;" type="text" id="Email" th:field="*{Email}" placeholder="Email of the Customer" required /></div> 
       <div class="form-name">Phone Number :<input style="font-family: Quicksand, sans-serif;" type="number" id="PhoneNumber" th:field="*{PhoneNumber}" placeholder="Phone number of the Customer" required /></div> 
       <div class="form-name">Address :<input style="font-family: Quicksand, sans-serif;" type="text" id="Address" th:field="*{Address}" placeholder="Address of the Customer" required /></div> 
+      <div class="form-name">Postal Code :<input style="font-family: Quicksand, sans-serif;" type="text" id="Address" th:field="*{PostalCode}" placeholder="Address of the Customer" required /></div> 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
