--- a/src/main/resources/templates/fragments/NavBar.html
+++ b/src/main/resources/templates/fragments/NavBar.html
@@ -26,6 +26,7 @@
                 <li><a class="dropdown-item" th:href="@{/staffSubmit}">Add a Staff Member</a></li>
                 <li><a class="dropdown-item" th:href="@{/staffView}">Staff Information</a></li>
                 <li><a class="dropdown-item" th:href="@{/technicianWorkReportSubmit}">Submit a Work Report</a></li>
+                <li><a class="dropdown-item" th:href="@{/technicianWorkReportView}">Work Reports</a></li>
                 <li><a class="dropdown-item" th:href="@{/certificationSubmit}">Add a Certification</a></li>
                 <li><a class="dropdown-item" th:href="@{/certificationView}">Certifications</a></li>
               </ul>
@@ -37,6 +38,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" th:href="@{/workOrderView}">Work Orders</a></li>
                 <li><a class="dropdown-item" th:href="@{/workOrderSubmit}">Work Order Submit</a></li>
+                <li><a class="dropdown-item" th:href="@{/customerSubmit}">Add a Customer</a></li>
                 <li><a class="dropdown-item" th:href="@{/customerView}">Customer Information</a></li>
                 <li><a class="dropdown-item" th:href="@{/warrantyClaimSubmit}">Warranty Claim Submit</a></li>
                 <li><a class="dropdown-item" th:href="@{/warrantyClaimView}">Warranty Claims</a></li>
