--- a/src/main/resources/templates/technicianWorkReportSubmit.html
+++ b/src/main/resources/templates/technicianWorkReportSubmit.html
@@ -21,7 +21,7 @@
   <a href="/src/main/resources/templates/menu.html" class="btn btn-danger">Menu</a>
   <h4>Enter the details for the new Technician Work Report</h4>
   <div class="form-data">
-    <form action="#" method="post" th:action="@{/addworkreport}" th:object="${WorkReport}">
+    <form action="#" method="post" th:action="@{/workReportSubmitForm}" th:object="${WorkReport}">
       <div class="form-name">Technician Id</div> 
       <input style="font-family: Quicksand, sans-serif;" type="number" id="StaffID" 
                 th:field="*{StaffID}" placeholder="Id of the Technician" required />
