improved home page; began work on rest of website CSS.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/SMD.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/home.css">
   <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/NavBar.css">
   <title>SMD Home</title>
 
@@ -15,6 +16,13 @@
   <h1>
     Welcome to the Service Management Database Home Page
   </h1>
+  </br>
+  <p1>
+  Welcome to the home page of the Service Management Database.
+  Here you will find everything that is needed to run a repair shop,
+  including staff and vendor management, customer services, and
+  inventory management. Please enjoy your visit.
+  </p1>
   <div class="TopBar"></div>
 </body>
 
