--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/NavBar :: NavBar}"></html>
+<link rel="stylesheet" href="/stylesheets/home.css">
 
   <body>
-    <p th:text="${message}">Exception message</p>
-    <p> you may want to drop all tables in your local pg <p>
+    <p1 th:text="${message}">Exception message</p>
+    <p1> you may want to drop all tables in your local pg <p1>
   </body>
 
 </html>
