--- a/src/main/resources/templates/certificationView.html
+++ b/src/main/resources/templates/certificationView.html
@@ -11,7 +11,6 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous"
   >
-  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitworkorder.css">
 
   <!--Font & Icon import-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
@@ -21,6 +20,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+
+  <!-- CSS file that makes changes to styled tables -->
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/certificationView.css">
   
   <style>
     ::-webkit-scrollbar {
@@ -48,14 +50,14 @@
         <th class="header-name" > Expiry Date | </th>
         <th class="header-name" > Technician ID </th>
         
-        <tr th:each="n:${Certifications}">
+        <!-- <tr th:each="n:${Certifications}">
           <td th:text="${n.CertificationNumber}"></td>
           <td th:text="${n.CertificationName}"></td>
           <td th:text="${n.DateObtained}"></td>
           <td th:text="${n.ExpiryDate}"></td>
           <td th:text="${n.TechnicianId}"></td>
 
-          <td>
+	  <td> -->
             <!-- <form th:action="@{/ToolEdit/{ToolId}(ToolId=${n.ToolId})}"> -->
               <button style="border: none; background:transparent;" type="submit" value="Edit"><i style="color:#00196A" class="fa fa-cog fa-lg"></i></button>
             </form>
