--- a/src/main/resources/templates/partSubmit.html
+++ b/src/main/resources/templates/partSubmit.html
@@ -11,23 +11,24 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous"
   >
-  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitworkorder.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/partSubmit.css">
   <title>Part Information</title>
 </head>
 
 <body>
   <main>
   <h1>Add a new Part's details</h1>
+  <p1>
   <h2>Data of an Part will be taken from this page and submitted into both 
         PartList and PartDesciption tables</h2>
   <h4>Enter the details for the new Part</h4>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/PartSubmitForm}" th:object="${Part}">
-      <div class="form-name">Name</div> 
+	    <div class="form-name">Name:<br></div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="PartName" 
                 th:field="*{PartName}" placeholder="Name of the Part" required />
       <br>
-      <div class="form-name">Description</div> 
+      <div class="form-name">Description:<br></div> 
       <input style="font-family: Quicksand, sans-serif;" type="text" id="PartDescription" 
                 th:field="*{PartDescription}" placeholder="Description of the Part" required />
       <br>
@@ -35,6 +36,7 @@
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
   </div>
+  </p1>
   </main>
   <script type="text/javascript"></script>
 </body>
