--- a/src/main/resources/public/stylesheets/Submitstaff.css
+++ b/src/main/resources/public/stylesheets/Submitstaff.css
@@ -1,4 +1,8 @@
 /* Basic CSS For the Staff Information Submission form */
+body {
+	background-image: url("images/staffBG.png");
+}
+
 h1 {
 	background-color: #d4d6df;
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
