--- a/src/main/resources/public/stylesheets/technicianWorkReportView.css
+++ b/src/main/resources/public/stylesheets/technicianWorkReportView.css
@@ -9,6 +9,9 @@ h1 {
 
 h2 {
 	font-family: "Quicksand", sans-serif;
+	border: 1px solid black;
+	background-color: white;
+	display: black;
 	text-align: center;
 	font-size: 20px;
 }
