--- a/src/main/resources/public/stylesheets/vendorSubmit.css
+++ b/src/main/resources/public/stylesheets/vendorSubmit.css
@@ -15,6 +15,10 @@ h2 {
 	font-family: "Quicksand", sans-serif;
 	text-align: center;
 	font-size: 20px;
+	background-color: white;
+	border: 1px solid black;
+	margin: auto;
+	width: 50%;
 }
 
 p1 {
