--- a/src/main/resources/templates/WarrantyClaimSubmit.html
+++ b/src/main/resources/templates/WarrantyClaimSubmit.html
@@ -11,22 +11,24 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous"
   >
-  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitworkorder.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/customerSubmit.css">
   <title>Warranty Claim Information</title>
 </head>
 
 <body>
   <main>
   <h1>Add a new Warranty Claim's details</h1>
-  <h4>Enter the details for the new Warranty Claim</h4>
+  <p1>
+  <h2>Enter the details for the new Warranty Claim</h2>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/warrantyClaimSubmitForm}" th:object="${WarrantyClaim}">
-      <div class="form-name">Id: <input style="font-family: Quicksand, sans-serif;" type="number" id="WarrantyID" th:field="*{WarrantyID}" placeholder="Id of the Warranty" required /></div> 
-      <div class="form-name">Brand: <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" th:field="*{Brand}" placeholder="Brand of the Warranty" required /></div> 
+	    <div class="form-name">Id:<br> <input style="font-family: Quicksand, sans-serif;" type="number" id="WarrantyID" th:field="*{WarrantyID}" placeholder="Id of the Warranty" required /></div> 
+	    <div class="form-name">Brand:<br> <input style="font-family: Quicksand, sans-serif;" type="text" id="Brand" th:field="*{Brand}" placeholder="Brand of the Warranty" required /></div> 
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
   </div>
+  </p1>
   </main>
   <script type="text/javascript"></script>
 </body>
