--- a/src/main/resources/templates/certificationView.html
+++ b/src/main/resources/templates/certificationView.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 
   <!-- CSS file that makes changes to styled tables -->
-  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/certificationView.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/staffView.css">
   
   <style>
     ::-webkit-scrollbar {
@@ -42,6 +42,7 @@
   <div class="db-container">
     <h1 style="font-weight: bolder;">Certifications</h1><br>
 
+    <p1>
     <table id="WorkOrderViewTable"class="styled-table">
       <tr class="table-header" style="color: rgb(0, 0, 0);">
         <th class="header-name"> Certification Number | </th>
@@ -50,14 +51,14 @@
         <th class="header-name" > Expiry Date | </th>
         <th class="header-name" > Technician ID </th>
         
-        <!-- <tr th:each="n:${Certifications}">
+         <tr th:each="n:${Certifications}">
           <td th:text="${n.CertificationNumber}"></td>
           <td th:text="${n.CertificationName}"></td>
           <td th:text="${n.DateObtained}"></td>
           <td th:text="${n.ExpiryDate}"></td>
           <td th:text="${n.TechnicianId}"></td>
 
-	  <td> -->
+	  <td> 
             <!-- <form th:action="@{/ToolEdit/{ToolId}(ToolId=${n.ToolId})}"> -->
               <button style="border: none; background:transparent;" type="submit" value="Edit"><i style="color:#00196A" class="fa fa-cog fa-lg"></i></button>
             </form>
@@ -65,6 +66,7 @@
         </tr>
         
     </table>
+    </p1>
   </div>
   <script type="text/javascript"></script>
 </body>
