--- a/src/main/resources/templates/toolSubmit.html
+++ b/src/main/resources/templates/toolSubmit.html
@@ -11,14 +11,15 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous"
   >
-  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitworkorder.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/partSubmit.css">
   <title>Tool Information</title>
 </head>
 
 <body>
   <main>
   <h1>Add a new Tool's details</h1>
-  <h4>Enter the details for the new Tool</h4>
+  <p1>
+  <h2>Enter the details for the new Tool</h2>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/toolSubmitForm}" th:object="${Tool}">
       <div class="form-name">Name</div> 
@@ -29,6 +30,7 @@
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
   </div>
+  </p1>
   </main>
   <script type="text/javascript"></script>
 </body>
