--- a/src/main/resources/templates/warrantyDivisionView.html
+++ b/src/main/resources/templates/warrantyDivisionView.html
@@ -11,7 +11,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous"
   >
-  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitworkorder.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/vendorView.css">
 
   <!--Font & Icon import-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
@@ -37,6 +37,7 @@
 </head>
 
 <body style="font-family: Quicksand, sans-serif;">
+  <p1>
   <div class="db-container">
     <h1 style="font-weight: bolder;">View Warranty Divisions</h1><br>
 
@@ -58,6 +59,7 @@
         
     </table>
   </div>
+  </p1>
   <script type="text/javascript"></script>
 </body>
 </html>
