--- a/src/main/resources/templates/workReportSubmit.html
+++ b/src/main/resources/templates/workReportSubmit.html
@@ -11,7 +11,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous"
   >
-  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/SubmitworkReport.css">
+  <link rel="stylesheet" th:action="@{/viewDetails}" href="/stylesheets/Submitstaff.css">
   <title>Submit Work Order</title>
 </head>
 
@@ -19,7 +19,8 @@
 <body>
   <main>
   <h1>Add a new Work Order's details</h1>
-  <h4>Enter the details for the new Work Order</h4>
+  <p1>
+  <h2>Enter the details for the new Work Order</h2>
   <div class="form-data">
     <form action="#" method="post" th:action="@{/workReportSubmitForm}" th:object="${WorkReport}">
       <div class="form-name">Date: <input style="font-family: Quicksand, sans-serif;" type="date" th:field="*{Date}" required /></div>
@@ -30,12 +31,13 @@
       <a th:href="@{/staffSubmit}">Add New Staff Member</a>
       </div>
       <div hidden><input type="text" th:field="*{OrderNum}" th:value="${WorkReport.OrderNum}"/></div>
-      <div class="form-name">Description/Message: <input style="font-family: Quicksand, sans-serif;" type="text" th:field="*{Message}" placeholder="Short Description of Repair Method Used" required /></div>
-      <div class="form-name">Does this End the Workorder?: <input style="font-family: Quicksand, sans-serif;" type="checkbox" th:field="*{CloseWorkorder}" placeholder="Warranty Claim ID" /></div>
+      <div class="form-name">Description/Message:<br><input style="font-family: Quicksand, sans-serif;" type="text" th:field="*{Message}" placeholder="Short Description of Repair Method Used" required /></div>
+      <div class="form-name">Does this End the Workorder?: <br><input style="font-family: Quicksand, sans-serif;" type="checkbox" th:field="*{CloseWorkorder}" placeholder="Warranty Claim ID" /></div>
       <input style="font-family: Quicksand, sans-serif;" type="submit" value="Submit Data" />
       <input style="font-family: Quicksand, sans-serif;" class="reset" type="button" onclick="resetform()" value="Reset">
     </form>
   </div>
+  </p1>
   </main>
   <script type="text/javascript"></script>
 </body>
